[gd_scene load_steps=21 format=2]

[ext_resource path="res://Entities/InteractableObjects/redmaterial.tres" type="Material" id=1]
[ext_resource path="res://Assets/asset package custom/kenneyretrourban/Models/GLTF format/metal.material" type="Material" id=2]
[ext_resource path="res://Assets/asset package custom/Hypno's Fantsy Village Pack/Window_001.material" type="Material" id=3]
[ext_resource path="res://Effects/Fire.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/asset package custom/Hypno's Fantsy Village Pack/Window.material" type="Material" id=5]
[ext_resource path="res://Sounds/SoundEffects/hissaudioogloop.mp3" type="AudioStream" id=6]
[ext_resource path="res://Sounds/SoundEffects/gunricochetroyaltyfree.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/asset package custom/paintpngs/explosive.png" type="Texture" id=8]
[ext_resource path="res://Assets/asset package custom/kenney sci fi sounds/thrusterFire_001.ogg" type="AudioStream" id=9]
[ext_resource path="res://Entities/InteractableObjects/ExplosiveContainer.gd" type="Script" id=10]
[ext_resource path="res://Entities/InteractableObjects/ValveInteractor.gd" type="Script" id=11]
[ext_resource path="res://Assets/asset package custom/kenney rpg audio/doorClose_2.ogg" type="AudioStream" id=12]
[ext_resource path="res://Sounds/SoundEffects/firefwooshexplosionreimport.mp3" type="AudioStream" id=13]
[ext_resource path="res://Sounds/SoundEffects/debrisexplodereimport.mp3" type="AudioStream" id=14]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 3, 3, 3 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.05, 0.0670831, 0.0719902 )

[sub_resource type="SpatialMaterial" id=3]
resource_name = "metal"
vertex_color_use_as_albedo = true
albedo_color = Color( 0.972549, 0.219608, 0.219608, 1 )
albedo_texture = ExtResource( 8 )
metallic = 0.35
roughness = 0.5
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 0.15, 0.15 )

[sub_resource type="CapsuleShape" id=5]
radius = 0.3
height = 1.55

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.6, 0.3, 0.3 )

[node name="OxygenTank" type="KinematicBody" groups=["Destructible"]]
script = ExtResource( 10 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
use_collision = true
radius = 0.25
height = 1.7
material = ExtResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.852585, 0 )
radius = 0.251
radial_segments = 8
material = ExtResource( 1 )

[node name="ValveInteractor" type="KinematicBody" parent="CSGSphere" groups=["Interactable"]]
script = ExtResource( 11 )

[node name="Valve" type="CSGCylinder" parent="CSGSphere/ValveInteractor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.285837, 0 )
radius = 0.03
height = 0.1
material = ExtResource( 3 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0664898, 0 )
radius = 0.02
height = 0.03
material = ExtResource( 5 )

[node name="CSGCylinder3" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.023111, 0.0430279, 0 )
radius = 0.01
height = 0.05
material = ExtResource( 5 )

[node name="CSGTorus" type="CSGTorus" parent="CSGSphere/ValveInteractor/Valve/CSGCylinder3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02421, 0 )
inner_radius = 0.003
outer_radius = 0.012
material = ExtResource( 2 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve/CSGCylinder3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.023326, 0 )
radius = 0.002
height = 0.015
material = ExtResource( 2 )

[node name="ValveJoint" type="Spatial" parent="CSGSphere/ValveInteractor/Valve"]
transform = Transform( 1, 0, 0, 0, -0.547227, -0.836984, 0, 0.836984, -0.547227, 0, 0.0272659, 0 )

[node name="ValveHandle" type="CSGTorus" parent="CSGSphere/ValveInteractor/Valve/ValveJoint"]
transform = Transform( -4.37114e-08, -1, 1.19249e-08, 0, 1.19249e-08, 1, -1, 4.37114e-08, -5.21253e-16, -0.0776105, 0, 0 )
inner_radius = 0.04
outer_radius = 0.07
material = ExtResource( 5 )

[node name="CSGCylinder" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve/ValveJoint/ValveHandle"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.011
height = 0.1
material = ExtResource( 5 )

[node name="CSGCylinder2" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve/ValveJoint/ValveHandle"]
transform = Transform( 3.55271e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )
radius = 0.011
height = 0.1
material = ExtResource( 5 )

[node name="CSGCylinder3" type="CSGCylinder" parent="CSGSphere/ValveInteractor/Valve/ValveJoint/ValveHandle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0313919, 0 )
radius = 0.01
height = 0.05
material = ExtResource( 5 )

[node name="Area" type="Area" parent="CSGSphere/ValveInteractor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.282164, 0 )

[node name="CollisionShape" type="CollisionShape" parent="CSGSphere/ValveInteractor/Area"]
shape = SubResource( 1 )

[node name="InteractCollide" type="CollisionShape" parent="CSGSphere/ValveInteractor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0501293, 0.343618, 0 )
shape = SubResource( 2 )

[node name="Leak" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35588, 0 )
stream = ExtResource( 6 )
unit_size = 3.0
autoplay = true

[node name="WHMIS" type="MeshInstance" parent="."]
transform = Transform( 0.922854, 0.385149, -1.68354e-08, 0, -4.37114e-08, -1, -0.385149, 0.922854, -4.03392e-08, 0.106263, 0.588978, 0.206322 )
mesh = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 60.0
max_db = 6.0
pitch_scale = 1.52

[node name="Fire" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
unit_db = 30.0
unit_size = 5.0
pitch_scale = 2.0
autoplay = true

[node name="Explode1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 13 )
unit_db = 80.0
unit_size = 8.0
max_db = 6.0

[node name="Explode2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 14 )
unit_db = 80.0
unit_size = 8.0
max_db = 6.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0320947, 0 )
shape = SubResource( 5 )

[node name="Hurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Exploding" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AfterFwoosh" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Turn" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ValveTurn" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 12 )

[node name="BigFire" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ValveFire" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-09, 0.3, 0, -0.1, -1.31134e-08, 0, 0, 0, 0.1, 0.13047, 1.18697, 0 )
visible = false

[node name="FireTick" type="Timer" parent="."]
wait_time = 0.3

[node name="FireDamage" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0319681, 1.14205, 0 )

[node name="CollisionShape" type="CollisionShape" parent="FireDamage"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.29245, 0, 0 )
shape = SubResource( 6 )

[node name="Aftermath" type="Timer" parent="."]
one_shot = true

[connection signal="loosen" from="CSGSphere/ValveInteractor" to="." method="_on_ValveInteractor_loosen"]
[connection signal="tighten" from="CSGSphere/ValveInteractor" to="." method="_on_ValveInteractor_tighten"]
[connection signal="timeout" from="Hurt" to="." method="_on_Hurt_timeout"]
[connection signal="timeout" from="Exploding" to="." method="_on_Exploding_timeout"]
[connection signal="timeout" from="AfterFwoosh" to="." method="_on_AfterFwoosh_timeout"]
[connection signal="timeout" from="Turn" to="." method="_on_Turn_timeout"]
[connection signal="timeout" from="FireTick" to="." method="_on_FireTick_timeout"]
[connection signal="timeout" from="Aftermath" to="." method="_on_Aftermath_timeout"]
